btn not visible bug

--- a/src/styles/Discover.module.css
+++ b/src/styles/Discover.module.css
@@ -126,13 +126,14 @@ body {
 }
 
 .expandedText {
-  margin-top: 3rem;
+  margin-top: 0rem;
   max-width: 85%;
   color: var(--white-text-color);
 }
 
 .expandedBtn {
   padding: 0.5rem 1rem;
+  margin-top: 0.5rem;
   background-color: transparent;
   color: var(--primary-color);
   border: 2px solid #fff;
@@ -182,7 +183,7 @@ body {
   }
 
   .expandedText {
-    margin-top: 4.5rem;
+    margin-top: 1rem;
   }
 }
 
@@ -223,7 +224,7 @@ body {
   }
 
   .expandedText {
-    margin-top: 3.5rem;
+    margin-top: -0.5rem;
   }
 }
 
@@ -264,7 +265,7 @@ body {
   }
 
   .expandedText {
-    margin-top: 5.5rem;
+    margin-top: 2rem;
   }
 }
 
@@ -305,7 +306,7 @@ body {
   }
 
   .expandedText {
-    margin-top: 6rem;
+    margin-top: 6.5rem;
   }
 }
 
